# outlook-mail-pool-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: app.rs  auth.rs  compat.rs  config.rs  importer.rs  lib.rs  mail.rs  main.rs  store.rs
